Fixed scrollable content hide under navbar
Fixed issue where scrollable content is not hidden under navbar when in mobile view

--- a/react-frontend/src/css/home2.css
+++ b/react-frontend/src/css/home2.css
@@ -4,7 +4,17 @@
 .container {
   color: white;
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
+}
+
+.container-content {
+  transform: translateY(-20vh);
+}
+
+@media screen and (min-width: 1024px) {
+  .container-content {
+    transform: translateY(0vh);
+  }
 }
 
 .subheader,
